# goph-419-f2023-lab01-stMD

./: README.md  pyproject.toml
examples/: driver.py
src/goph419lab01/: range.py  taylor.py  tests.py
